--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qrcode.react": "^1.0.0",
     "qs": "6.9.1",
     "react": "16.10.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.10.1",
     "react-is": "16.12.0",
     "react-router-dom": "5.1.2",
